--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - v*
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   # https://github.com/firecracker-microvm/firecracker/commit/30af4758dafa7eea89ba5ed7071f28e6c1f11f96
   kernel:
@@ -110,3 +113,38 @@ jobs:
         with:
           name: firecracker
           path: firecracker/firecracker
+      
+  release:
+    name: Publish release
+    needs: [kernel, firecracker]
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Download firecracker artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: firecracker
+          path: firecracker
+      
+      - name: Download kernel artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: freebsd-kern.bin
+          path: freebsd-kern.bin
+
+      - name: Download rootfs artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: freebsd-rootfs.bin
+          path: freebsd-rootfs.bin
+
+      - uses: marvinpinto/action-automatic-releases@919008cf3f741b179569b7a6fb4d8860689ab7f0 # v1.1.1
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          draft: false
+          prerelease: false
+          files: |
+            firecracker
+            freebsd-kern.bin
+            freebsd-rootfs.bin
