Combine FreeBSD build scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,17 +46,10 @@ jobs:
         shell: sudo bash -e {0}
         run: vagrant ssh fbsd -- 'sudo patch -d /usr/src < /vagrant/freebsd-amd-tsc-init.patch'
 
-      - name: make buildworld
+      - name: Build FreeBSD rootfs and kernel
         shell: sudo bash -e {0}
         run: |
-          set -e
-          vagrant ssh fbsd -- sudo /vagrant/buildworld.sh
-          df -h
-
-      - name: make buildkernel
-        shell: sudo bash -e {0}
-        run: |
-          vagrant ssh fbsd -- sudo /vagrant/buildkernel.sh
+          vagrant ssh fbsd -- sudo /vagrant/build-freebsd.sh
           df -h
 
       - name: Prepare rootfs
