Add workaround for low throughput when downloading FreeBSD packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,6 +116,7 @@ jobs:
           cd firecracker
 
           patch -p1 < ../firecracker-mtu-9000.patch
+          patch -p1 < ../firecracker-max-queue-size.patch
 
           tools/devtool checkenv
 
