Switch to xz compression for rootfs, and skip slower tar step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,7 @@ jobs:
         shell: sudo bash -e {0}
         run: |
           vagrant scp fbsd:/vagrant/freebsd-kern.bin freebsd-kern.bin
-          vagrant scp fbsd:/vagrant/freebsd-rootfs.tar.bz2 freebsd-rootfs.tar.bz2
+          vagrant scp fbsd:/vagrant/freebsd-rootfs.bin.xz freebsd-rootfs.bin.xz
 
       - name: Archive kernel artifact
         uses: actions/upload-artifact@v3
@@ -85,8 +85,8 @@ jobs:
       - name: Archive rootfs artifact
         uses: actions/upload-artifact@v3
         with:
-          name: freebsd-rootfs.tar.bz2
-          path: freebsd-rootfs.tar.bz2
+          name: freebsd-rootfs.bin.xz
+          path: freebsd-rootfs.bin.xz
   
   # https://github.com/firecracker-microvm/firecracker/blob/feature/pvh/docs/getting-started.md
   firecracker:
@@ -153,8 +153,8 @@ jobs:
       - name: Download rootfs artifact
         uses: actions/download-artifact@v3
         with:
-          name: freebsd-rootfs.tar.bz2
-          path: freebsd-rootfs.tar.bz2
+          name: freebsd-rootfs.bin.xz
+          path: freebsd-rootfs.bin.xz
 
       - uses: marvinpinto/action-automatic-releases@919008cf3f741b179569b7a6fb4d8860689ab7f0 # v1.1.1
         with:
@@ -164,4 +164,4 @@ jobs:
           files: |
             firecracker
             freebsd-kern.bin
-            freebsd-rootfs.tar.bz2
+            freebsd-rootfs.bin.xz
