--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,13 +133,41 @@ jobs:
           name: firecracker
           path: firecracker/firecracker
       
+  cross:
+    name: Build cross
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@984d158d699777abbaa79de23de3134e60c187fa # stable branch
+
+      - name: Build cross
+        run: |
+          wget -q -O- https://api.github.com/repos/cross-rs/cross/tarball/29798141ea21d1b4d7647c09df6faa5ee66e9594 | tar -xz --strip-components=1
+          cargo build --release
+
+      - name: Archive artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: cross
+          path: target/release/cross
+
   release:
     name: Publish release
-    needs: [kernel, firecracker]
+    needs: [cross, firecracker, kernel]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
 
     steps:
+      - name: Download cross artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: cross
+          path: cross
+      
       - name: Download firecracker artifact
         uses: actions/download-artifact@v3
         with:
@@ -164,6 +192,7 @@ jobs:
           draft: false
           prerelease: false
           files: |
+            cross
             firecracker
             freebsd-kern.bin
             freebsd-rootfs.bin.xz
