--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -128,7 +128,26 @@ jobs:
         with:
           name: firecracker
           path: firecracker/firecracker
-      
+  
+  ssh-keys:
+    name: Archive SSH keys
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Archive SSH public key
+        uses: actions/upload-artifact@v3
+        with:
+          name: freebsd.id_rsa.pub
+          path: freebsd.id_rsa.pub
+        
+      - name: Archive SSH private key
+        uses: actions/upload-artifact@v3
+        with:
+          name: freebsd.id_rsa
+          path: freebsd.id_rsa
+  
   cross:
     name: Build cross
     runs-on: ubuntu-22.04
@@ -153,7 +172,7 @@ jobs:
 
   release:
     name: Publish release
-    needs: [cross, firecracker, kernel]
+    needs: [cross, firecracker, kernel, ssh-keys]
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-22.04
 
@@ -182,6 +201,18 @@ jobs:
           name: freebsd-rootfs.bin.xz
           path: freebsd-rootfs.bin.xz
 
+      - name: Download SSH public key
+        uses: actions/download-artifact@v3
+        with:
+          name: freebsd.id_rsa.pub
+          path: freebsd.id_rsa.pub
+
+      - name: Download SSH private key
+        uses: actions/download-artifact@v3
+        with:
+          name: freebsd.id_rsa
+          path: freebsd.id_rsa
+
       - uses: marvinpinto/action-automatic-releases@919008cf3f741b179569b7a6fb4d8860689ab7f0 # v1.1.1
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
@@ -192,3 +223,5 @@ jobs:
             firecracker
             freebsd-kern.bin
             freebsd-rootfs.bin.xz
+            freebsd.id_rsa.pub
+            freebsd.id_rsa
