--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Build Firecracker
         shell: sudo bash -e {0}
         run: |
-          git clone --quiet --depth=1 --branch=feature/pvh-1.7.0 https://github.com/acj/firecracker
+          git clone --quiet --depth=1 --branch=v1.12.0 https://github.com/firecracker-microvm/firecracker
           cd firecracker
 
           tools/devtool checkenv
